# NewsPilot

./: .gitignore  README.md  enrich_article.command  index.html  pyproject.toml  run_agent.command  test.py
.github/workflows/: rss_fetch.yml
InfoAgent/: __init__.py  __main__.py  context.py
InfoAgent/core/: __init__.py  analyzer.py  data.py  frequency.py
InfoAgent/crawler/: __init__.py
InfoAgent/legacy/: __init__.py  analyzer.py
InfoAgent/llm/: __init__.py  enrich.py  openai_compat.py  prompt.py
InfoAgent/notification/: __init__.py  dispatcher.py  renderer.py  senders.py  splitter.py
InfoAgent/report/: __init__.py  formatter.py  generator.py  history.py  html.py
InfoAgent/storage/: __init__.py  local.py  manager.py  remote.py  rss_schema.sql  schema.sql
InfoAgent/utils/: __init__.py  url.py
InfoAgent/workflows/: run.py  workflow.py
NewsPilot/: __init__.py  __main__.py  context.py
NewsPilot/core/: __init__.py  analyzer.py  data.py  loader.py
NewsPilot/crawler/: __init__.py
NewsPilot/legacy/: analyzer.py
NewsPilot/llm/: agent_enrich.py  enrich.py  fulltext.py  openai_compat.py
NewsPilot/notification/: __init__.py  dispatcher.py  renderer.py  senders.py  splitter.py
NewsPilot/report/: __init__.py  formatter.py  generator.py  history.py  html.py
NewsPilot/storage/: __init__.py  llm_store.py  local.py  manager.py  remote.py  rss_schema.sql  schema.sql
NewsPilot/utils/: env.py  (+1 more)
config/: config.yaml  frequency_words.txt  frequency_words_all.txt
docs/: 2026-05-22.html  2026-05-29.html  index.html  当日汇总.html
prompts/: rss_enrich_routine.md
(+12 files in other folders)
