[project]
name = "NewsPilot"
version = "1.0.0"
description = "NewsPilot - AI-driven news aggregation and enrichment tool"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "pytz>=2025.2,<2026.0",
    "PyYAML>=6.0.3,<7.0.0",
    "fastmcp>=2.12.0,<2.14.0",
    "websockets>=13.0,<14.0",
    "feedparser>=6.0.0,<7.0.0",
    "boto3>=1.35.0,<2.0.0",
    "langgraph>=0.2.0,<0.3.0",
]

[project.scripts]
NewsPilot = "NewsPilot.__main__:main"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["NewsPilot"]
